2003-06-21  Jakub Jelinek  <jakub@redhat.com>

	* config/i386/i386.c (x86_output_mi_thunk): Use simple jmp
	if function binds local even if flag_pic.

	* varasm.c (resolve_unique_section): Remove prototype.  No longer
	static.
	* tree.h (resolve_unique_section): New prototype.

2003-06-28  Jakub Jelinek  <jakub@redhat.com>

	* builtins.c (c_strlen): Add only_value argument.
	Handle COND_EXPR and COMPOUND_EXPR.
	(expand_builtin_strlen): Optimize also strlen (i++ ? "foo" : "bar").
	Adjust c_strlen callers.
	(expand_builtin_strcpy, expand_builtin_strncpy,
	expand_builtin_strcmp, expand_builtin_strncmp,
	expand_builtin_fputs, fold_builtin): Adjust c_strlen callers.

2003-04-14  Roger Sayle  <roger@eyesopen.com>

	* builtins.c (expand_builtin_strlen):  Evaluate the lengths of
	string literals at compile-time.

2003-07-08  Jakub Jelinek  <jakub@redhat.com>

	PR c/11420
	* config/i386/i386.c (ix86_check_movabs): New function.
	* config/i386/i386-protos.h (ix86_check_movabs): New prototype.
	* config/i386/i386.md (movabs[shq]i_1_rex64): Kill broken alternative.
	(movabs[shqd]i_[12]_rex64): Add ix86_check_movabs check to conditions.

	* config/i386/i386.md (movdi_1_rex64): Set Y<-m alternative's type
	to sse.

2003-07-08  Jakub Jelinek  <jakub@redhat.com>

	* unroll.c (reg_dead_after_loop): Check for reg in REG_EQUAL and
	REG_EQUIV notes as well.

2003-06-16  Jakub Jelinek  <jakub@redhat.com>

	* c-decl.c (finish_decl): Change _libfunc SYMBOL_REFs created in
	optabs.c when redirecting a builtin.

2003-06-24  Jakub Jelinek  <jakub@redhat.com>

	* builtins.c (expand_builtin_strcpy): Don't evaluate side-effects in
	src twice.

2003-06-23  Jakub Jelinek  <jakub@redhat.com>

	* config/i386/i386.c (ix86_asm_file_end): Call SUBTARGET_FILE_END
	even if pic_label_name[0] is 0.

2003-04-15  Ulrich Weigand  <uweigand@de.ibm.com>

	* unwind.inc (_Unwind_Backtrace): New function.
	* unwind.h (_Unwind_Backtrace): Declare it.
	* libgcc-std.ver (_Unwind_Backtrace): Export it.
