@@ -1,3 +1,8 @@
+2003-06-18  Richard Henderson  <rth@redhat.com>
+
+	* config/ia64/unwind-ia64.c (_Unwind_GetCFA): New.
+	(_Unwind_FindEnclosingFunction): Implement.
+
 2003-06-21  Jakub Jelinek  <jakub@redhat.com>
 
 	* config/i386/i386.c (x86_output_mi_thunk): Use simple jmp
